--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -38,26 +38,30 @@
 					   </div>
 					   <div class="panel-body">
 						   <div class="table-responsive">
-						   		<table class="table table-condensed">
-						   			<tr class="active">
-						   				<th><i class="fa fa-users" aria-hidden="true"></i></th>
-						   				<th>1/8</th>
-						   				<th>1/4</th>
-						   				<th>1/2</th>
-						   				<th>1/1</th>
-						   				<th>3.</th>
-						   			</tr>
-						   			<tr>
-						   				<td class="success">
-						   					<span th:text="${statistic.pointsGroup}"></span>
-						   					<span th:if="${statistic.maxGroupPointsCandidate}" class="fa fa-star blue" aria-hidden="true"></span>
-						   				</td>
-						   				<td class="warning" th:text="${statistic.pointsRoundOfSixteen}"></td>
-						   				<td class="warning" th:text="${statistic.pointsQuarterFinal}"></td>
-						   				<td class="warning" th:text="${statistic.pointsSemiFinal}"></td>
-						   				<td class="warning" th:text="${statistic.pointsFinal}"></td>
-						   				<td class="info" th:text="${statistic.pointsGameForThird}"></td>
-						   			</tr>
+						   		<table class="table table-condensed table-centered">
+									<thead>
+										<tr class="active">
+											<th><i class="fa fa-users" aria-hidden="true"></i></th>
+											<th>1/8</th>
+											<th>1/4</th>
+											<th>1/2</th>
+											<th>1/1</th>
+											<th>3.</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="success">
+												<span th:text="${statistic.pointsGroup}"></span>
+												<span th:if="${statistic.maxGroupPointsCandidate}" class="fa fa-star blue" aria-hidden="true"></span>
+											</td>
+											<td class="warning" th:text="${statistic.pointsRoundOfSixteen}"></td>
+											<td class="warning" th:text="${statistic.pointsQuarterFinal}"></td>
+											<td class="warning" th:text="${statistic.pointsSemiFinal}"></td>
+											<td class="warning" th:text="${statistic.pointsFinal}"></td>
+											<td class="info" th:text="${statistic.pointsGameForThird}"></td>
+										</tr>
+									</tbody>
 						   		</table>
 					   	   </div>
 					   </div>
