--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -21,7 +21,7 @@
 									<th title="Draws">D</th>
 									<th title="Looses">L</th>
 									<th title="Goals">G</th>
-									<th title="Diff">Diff</th>
+									<th title="Goal Difference">Diff</th>
 									<th title="Points">Pts</th>
 								</tr>
 							</thead>
