update to font awesome 5.12

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -7,8 +7,10 @@
 		<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">FredBet</title>
 		
 		<link rel="shortcut icon" th:href="@{/favicon.ico}" />
-		
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" />
+
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/fontawesome.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/brands.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/solid.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />		
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap-theme.min.css}" />		
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
