--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -18,15 +18,15 @@
 						   <div class="table-responsive">
 						   		<table class="table table-condensed">
 						   			<tr>
-						   				<th th:title="#{extra_bets.finalWinner}">1. <span class="fa fa-trophy"></span></th>					   				
+						   				<th th:title="#{extra_bets.finalWinner}">1. <span class="fas fa-trophy"></span></th>
 						   				<td class="success" th:text="#{${'country.' + extraBet.finalWinner.getIsoCode()}}"></td>
 						   			</tr>
 						   			<tr>	
-						   				<th th:title="#{extra_bets.semiFinalWinner}">2. <span class="fa fa-trophy"></span></th>
+						   				<th th:title="#{extra_bets.semiFinalWinner}">2. <span class="fas fa-trophy"></span></th>
 						   				<td class="warning" th:text="#{${'country.' + extraBet.semiFinalWinner.getIsoCode()}}"></td>
 						   			</tr>
 						   			<tr>	
-						   				<th th:title="#{extra_bets.thirdFinalWinner}">3. <span class="fa fa-trophy"></span></th>
+						   				<th th:title="#{extra_bets.thirdFinalWinner}">3. <span class="fas fa-trophy"></span></th>
 						   				<td class="info" th:text="#{${'country.' + extraBet.thirdFinalWinner.getIsoCode()}}"></td>
 						   			</tr>
 						   			<tr>
