--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -34,7 +34,7 @@
 							<div class="col-xs-3">
 								<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}} + '?redirectViewName=OPEN_BETS'" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'" 
 									class="btn btn-success" role="button">
-									<span class="fa fa-thumbs-o-up fa-lg"></span>
+									<span class="fas fa-thumbs-up fa-lg"></span>
 								</a>
 							</div>
 						</div>
