--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -32,15 +32,15 @@
 							<label th:text="#{image.upload.rotate}"></label><br/>
 							<div class="row center">
 								<div class="col-xs-4">
-									<i class="fa fa-user" aria-hidden="true"></i>
+									<i class="fas fa-user" aria-hidden="true"></i>
 									<input type="radio" th:field="*{rotation}" value="NONE"/>
 								</div>
 								<div class="col-xs-4">
-									<i class="fa fa-undo" aria-hidden="true"></i>
+									<i class="fas fa-undo" aria-hidden="true"></i>
 									<input type="radio" th:field="*{rotation}" value="LEFT"/>
 								</div>
 								<div class="col-xs-4">
-									<i class="fa fa-repeat" aria-hidden="true"></i>
+									<i class="fas fa-repeat" aria-hidden="true"></i>
 									<input type="radio" th:field="*{rotation}" value="RIGHT"/>
 								</div>								
 							</div>		
