--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -25,10 +25,10 @@
 				<div class="row">
 					<button id="crop-image" th:text="#{user.image.cropping.select.range}" class="btn btn-info"></button>
 					<button type="button" class="crop-image-rotate btn" data-deg="-90">
-						<i class="fa fa-undo" aria-hidden="true"></i>
+						<i class="fas fa-undo" aria-hidden="true"></i>
 					</button>
 					<button type="button" class="crop-image-rotate btn" data-deg="90">
-						<i class="fa fa-repeat" aria-hidden="true"></i>
+						<i class="fas fa-repeat" aria-hidden="true"></i>
 					</button>
 				</div>
 				<br/>
