--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -13,9 +13,9 @@
 				</div> 
 				<div th:if="${@runtimeConfigurationUtil.getConfig().isEnabledParentChildRanking()}" class="col-xs-6">
 					<div class="row pull-right btn-group" role="group">
-						<a href="#" th:href="@{/ranking/mixed}" class="btn btn-default"><i class="fa fa-user" aria-hidden="true"></i> <i class="fa fa-child" aria-hidden="true"></i></a>					
-						<a href="#" th:href="@{/ranking/adult}" class="btn btn-default"><i class="fa fa-user" aria-hidden="true"></i></a>
-						<a href="#" th:href="@{/ranking/child}" class="btn btn-default"><i class="fa fa-child" aria-hidden="true"></i></a>
+						<a href="#" th:href="@{/ranking/mixed}" class="btn btn-default"><i class="fas fa-user" aria-hidden="true"></i> <i class="fas fa-child" aria-hidden="true"></i></a>
+						<a href="#" th:href="@{/ranking/adult}" class="btn btn-default"><i class="fas fa-user" aria-hidden="true"></i></a>
+						<a href="#" th:href="@{/ranking/child}" class="btn btn-default"><i class="fas fa-child" aria-hidden="true"></i></a>
 					</div>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
             <div class="row" th:if="${not #lists.isEmpty(rankings)}">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <button type="button" class="btn btn-info" data-toggle="collapse" data-target=".panel-heading"><span th:text="#{ranking.show.details.button}"></span></button>
-					<a class="btn btn-primary" role="button" th:href="@{/ranking/pdf}"><i class="fa fa-file-pdf-o"></i>  <span th:text="#{pdf.export.button}"></span></a>
+					<a class="btn btn-primary" role="button" th:href="@{/ranking/pdf}"><i class="fas fa-file-pdf-o"></i>  <span th:text="#{pdf.export.button}"></span></a>
                 </div>
             </div>
 			<div class="row">
