--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -12,7 +12,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<p th:text="#{excel.export.hint}"></p>
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}">
-						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.allBets}"></span>
+						<i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.allBets}"></span>
 					</a>
 				</div>
 			</div>
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/ranking}">
-						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.ranking}"></span>
+						<i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.ranking}"></span>
 					</a>
 				</div>
 			</div>
@@ -28,7 +28,7 @@
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}">
-						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.extraBets}"></span>
+						<i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.extraBets}"></span>
 					</a>
 				</div>
 			</div>
@@ -36,7 +36,7 @@
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}">
-						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.pointsCount}"></span>
+						<i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.pointsCount}"></span>
 					</a>
 				</div>
 			</div>
