--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -55,12 +55,12 @@
 						</div>
 						<div class="row center">
 							<div class="col-xs-6">
-								<button type="button" class="btn vote" onclick="oneCountUp()"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn vote" onclick="oneCountDown()"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn vote" onclick="oneCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn vote" onclick="oneCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 							<div class="col-xs-6">
-								<button type="button" class="btn vote" onclick="twoCountUp()"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
-								<button type="button" class="btn vote" onclick="twoCountDown()"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+								<button type="button" class="btn vote" onclick="twoCountUp()"><i class="fas fa-chevron-up" aria-hidden="true"></i></button>
+								<button type="button" class="btn vote" onclick="twoCountDown()"><i class="fas fa-chevron-down" aria-hidden="true"></i></button>
 							</div>
 						</div>						
 						<div id="penaltyBox" th:if="${!betCommand.isGroupMatch()}">
@@ -91,10 +91,10 @@
 						<div class="row">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 							<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
-							<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fa fa-diamond" aria-hidden="true"></i></button>
+							<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fas fa-dice" aria-hidden="true"></i></button>
 						</div>
 						<div class="row">
-							<i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+							<i class="fas fa-calendar-check-o" aria-hidden="true"></i>
 							<a href="#" th:href="@{'/ics/' + ${betCommand.matchId}}" th:text="#{calendar.ics.download.text}"></a>
 						</div>
 					</div>
