--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -32,7 +32,7 @@
 					</div>
 					<div class="form-group">
 						<label th:text="#{matches.form.teamNames} + ':'"></label>
-						<a href="#" onclick="clearTeamNameFields()"><i class="fas fa-times-circle-o" aria-hidden="true"></i></a>
+						<a href="#" onclick="clearTeamNameFields()"><i class="fas fa-times-circle" aria-hidden="true"></i></a>
 						<br/>
 						<div class="row">							
 							<div class="col-xs-6">
