--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -94,7 +94,7 @@
 							<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fas fa-dice" aria-hidden="true"></i></button>
 						</div>
 						<div class="row">
-							<i class="fas fa-calendar-check-o" aria-hidden="true"></i>
+							<i class="fas fa-calendar-check" aria-hidden="true"></i>
 							<a href="#" th:href="@{'/ics/' + ${betCommand.matchId}}" th:text="#{calendar.ics.download.text}"></a>
 						</div>
 					</div>
