--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -40,7 +40,7 @@
 									<input type="radio" th:field="*{rotation}" value="LEFT"/>
 								</div>
 								<div class="col-xs-4">
-									<i class="fas fa-repeat" aria-hidden="true"></i>
+									<i class="fas fa-redo" aria-hidden="true"></i>
 									<input type="radio" th:field="*{rotation}" value="RIGHT"/>
 								</div>								
 							</div>		
