--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -28,7 +28,7 @@
 						<i class="fas fa-undo" aria-hidden="true"></i>
 					</button>
 					<button type="button" class="crop-image-rotate btn" data-deg="90">
-						<i class="fas fa-repeat" aria-hidden="true"></i>
+						<i class="fas fa-redo" aria-hidden="true"></i>
 					</button>
 				</div>
 				<br/>
