using font awesome icons

--- a/src/main/resources/templates/admin/runtime_config.html
+++ b/src/main/resources/templates/admin/runtime_config.html
@@ -17,25 +17,25 @@
 							<li class="list-group-item">								
 								<input id="enabledParentChildRanking" type="checkbox" th:field="*{runtimeConfig.enabledParentChildRanking}"/>
 								<label for="enabledParentChildRanking" th:text="#{administration.runtime.configuration.enabledParentChildRanking}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{administration.runtime.configuration.enabledParentChildRanking.tooltip}"></span>								
 							</li>
 							<li class="list-group-item">									
 								<input id="enableChangingUsername" type="checkbox" th:field="*{runtimeConfig.enableChangingUsername}"/>
 								<label for="enableChangingUsername" th:text="#{administration.runtime.configuration.enableChangingUsername}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{administration.runtime.configuration.enableChangingUsername.tooltip}"></span>
 							</li>
 							<li class="list-group-item">									
 								<input id="showDemoDataNavigationEntry" type="checkbox" th:field="*{runtimeConfig.showDemoDataNavigationEntry}"/>
 								<label for="showDemoDataNavigationEntry" th:text="#{administration.runtime.configuration.showDemoDataNavigationEntry}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{administration.runtime.configuration.showDemoDataNavigationEntry.tooltip}"></span>
 							</li>
 							<li class="list-group-item">								
 								<input id="changePasswordOnFirstLogin" type="checkbox" th:field="*{runtimeConfig.changePasswordOnFirstLogin}"/>
 								<label for="changePasswordOnFirstLogin" th:text="#{administration.runtime.configuration.changePasswordOnFirstLogin}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{administration.runtime.configuration.changePasswordOnFirstLogin.tooltip}"></span>								
 							</li>
 						</ul>														
@@ -114,7 +114,7 @@
 							<li class="list-group-item">
 								<input id="selfRegistrationEnabled" type="checkbox" th:field="*{runtimeConfig.selfRegistrationEnabled}"/>
 								<label for="selfRegistrationEnabled" th:text="#{administration.runtime.configuration.selfRegistrationEnabled}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top"
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 									  th:title="#{administration.runtime.configuration.selfRegistrationEnabled.tooltip}"></span>
 							</li>
 						</ul>
