--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -81,7 +81,7 @@
 							<div class="row" th:if="${betCommand.jokerEditable}">
 								<input id="useJoker" type="checkbox" th:field="*{useJoker}" th:value="${useJoker}"/>
 								<label for="useJoker" th:text="#{betting.joker}"></label>
-								<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 									th:title="#{betting.joker.tooltip}"></span>
 							</div>	
 							<div class="row">
