--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -20,7 +20,7 @@
 					  			<div class="col-xs-5">
 					  				<div class="row custom-button-group">
 					  					<a sec:authorize="hasAuthority('PERM_EDIT_USER')" th:href="@{'/user/' + ${userDto.userId}}" class="btn btn-primary" role="button">
-					  						<span class="glyphicon glyphicon-pencil"></span>
+					  						<span class="fas fa-edit"></span>
 				  						</a>
 									</div>
 					  			</div>				  				
