--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -14,7 +14,7 @@
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#" th:href="@{/matches/upcoming}"><span class="glyphicon glyphicon-home"></span></a>
+					<a class="navbar-brand" href="#" th:href="@{/matches/upcoming}"><span class="fas fa-home"></span></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul th:if="${@webSecurityUtil.isUserLoggedIn()}" class="nav navbar-nav">
@@ -188,7 +188,7 @@
 						</li>
 						<li th:if="${@webSecurityUtil.isUserLoggedIn()}">
 							<a th:href="@{/logout}">
-								<span class="glyphicon glyphicon-log-out"></span>
+								<i class="fas fa-sign-out-alt"></i>
 								<span th:text="#{navigation.logout}" th:remove="tag"></span>
 							</a>
 						</li>					
