--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 						<div class="form-group">
 							<input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success" type="checkbox" name="remember-me" /> 
 							<label for="remember-me">Auto-Login</label>
-							<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+							<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 								th:title="#{login.autologin.tooltip}"></span>
 						</div>
 						<div class="form-group">
