--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -27,7 +27,7 @@
 								<li class="list-group-item" th:each="role : ${availableRoles}">
 									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
 									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
-									<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+									<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 								th:title="#{'user.edit.tooltip.' + ${role}}"></span>
 								</li>							
 							</ul>
